--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "I'm going to try https://thebookofshaders.com/ exercises in threejs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=development",
+    "build-prod": "webpack --mode=production"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,8 @@
   "devDependencies": {
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6"
+  },
+  "dependencies": {
+    "three": "^0.107.0"
   }
 }
