--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.7.2",
+    "webpack-glsl-loader": "^1.0.1"
   },
   "dependencies": {
     "three": "^0.107.0"
