--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
-    "gh-pages": "^2.1.1",
+    "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
     "webpack-glsl-loader": "^1.0.1"
   },
   "dependencies": {
-    "three": "^0.107.0"
+    "glslCanvas": "^0.1.7"
   }
 }
